<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tictac.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrim">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/select_your_options"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/game_type"
                    android:textSize="24sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/single_player"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/single_player_vs_computer"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/two_players"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/two_players"
                        android:textSize="24sp" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/letter_selection_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/letter_selection_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_letter"
                    android:textSize="24sp" />

                <RadioGroup
                    android:id="@+id/letter_selection_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/play_as_X"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/x"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/play_as_O"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/o"
                        android:textSize="24sp" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/board_size"
                    android:textSize="24sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/three_by_three_board"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/three_by_three"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/four_by_four_board"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/four_by_four"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/five_by_five_board"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/five_by_five"
                        android:textSize="24sp" />
                </RadioGroup>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_round_edges"
                    android:onClick="playGame"
                    android:padding="8dp"
                    android:text="@string/play_game"
                    android:textSize="24sp"
                    android:theme="@style/BrownButtonTheme" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
