<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tictac.DefaultGameActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrim"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_11"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="@color/brownPrimaryDark"
                    android:gravity="center"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/text_view_12"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/text_view_13"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="@color/brownPrimaryDark"
                    android:gravity="center"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_21"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/text_view_22"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="@color/brownPrimaryDark"
                    android:gravity="center"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/text_view_23"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_31"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="@color/brownPrimaryDark"
                    android:gravity="center"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/text_view_32"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/text_view_33"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:background="@color/brownPrimaryDark"
                    android:gravity="center"
                    android:textSize="32sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/score_board"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/player_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/player_one"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/player_x_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textSize="32sp" />
                </LinearLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/player_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/player_two"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/player_o_score"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textSize="32sp" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@drawable/button_round_edges"
                android:onClick="resetBoard"
                android:text="@string/reset"
                android:theme="@style/BrownButtonTheme" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
